[project]
name = "kickvod"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "erayjs", email = "you@example.com" }]
dependencies = ["flet==0.27.1", "requests==2.31.0", "m3u8==3.4.0"]

[tool.flet]
org = "com.erayjs.kickvod"
product = "kickvod"
company = "erayjs"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.27.1"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.27.1" }
